--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[headers]]
-  for = "/**/*"
+  for = "/hello"
   [headers.values]
   Access-Control-Allow-Origin = "*"
   Cross-Origin-Embedder-Policy = "require-corp"
